1.24.0
------
TODO: - Detect playlists from MIME type by default, finally? Or should the -@
  always stay there as it already switches to track playback?
- libmpg123 version 43:
-- Add flags MPG123_NO_PEEK_END and MPG123_FORCE_SEEKABLE, as suggested
   by Bent Bisballe Nyeng.
- Avoid repeating genre in metadata printout for specifications like
  (144)Thrash Metal.

1.23.7
------
- Fix the bad RPM spec file (broken since out123 addition, thanks
  to Srikanth Rao for noticing).
- More out123_pause() in generic control mode, working around
  bug 236. The coreaudio output needs to be more robust, though.
- Do not undef MPG123_EXPORT in the headers, rather be prepared for it
  being defined already. This fixes MSVC builds, broken since 1.23.0
  (bug 239).

1.23.6
------
- call out123_pause() instead of out123_stop() in remote control STOP
  command, fixing the regression in 1.23.x of not being able to resume
  playback with another LOAD unless the new track has differing audio
  format (bug 234)

1.23.5
------
- libout123:
-- fix build of portaudio and SDL on win32 (too many parentheses,
   thanks to Sandro Cumerlato for pointing it out)
-- make out123_errcode() return OUT123_BAD_HANDLE as documented
   (adding that value to the error enum, was documented but missing),
   again thanks to Sandro
- fix windows-builds.sh (shell quoting in copying stage) and add some
  bits to shipped header to make it directly usable in MSVC (define ssize_t,
  bug 232)
- no overwriting of LIBS in Makefile (build system regression in 1.23,
  thanks to Peter Korsgaard for reporting that one)
- no printing of message in response to SIGPIPE, as that could trigger
  a hang if stderr itself is the piped culprit (regression from 1.22, bug 233)

1.23.4
------
- mpg123: Fix logic of prebuffering small bits for glitch-free start of
  playback. The logic as introduced in 1.23.0 actually introduced stuttering!
  The fix for this is really minimal and I urge everyone to at least include